deployment/exercise.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exercise
  labels:
    app: exercise
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exercise
  template:
    metadata:
      labels:
        app: exercise
    spec:
      containers:
      - name: starfit
        image: hjsky1010/exercise:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
