deployment/sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starfit
  labels:
    app: starfit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: starfit
  template:
    metadata:
      labels:
        app: starfit
    spec:
      containers:
      - name: starfit
        image: stfantasy3324/starfit:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
