deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: starfit
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - secretName: tls-secret
  rules:
  - host: teng.169.56.174.139.nip.io
    http:
      paths:
      - path: /starfitexercise
        pathType: Prefix
        backend:
          service:
            name: exercise
            port:
              number: 8080
      - path: /starfituser
        pathType: Prefix
        backend:
          service:
            name: user
            port:
              number: 8080
      - path: /starfitgoal
        pathType: Prefix
        backend:
          service:
            name: goal
            port:
              number: 8080
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: front
            port:
              number: 8080
